--- a/index.html
+++ b/index.html
@@ -3,10 +3,112 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <!--<link rel="stylesheet" href="style.css">-->
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+<header class="main-header">
+    <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img-logo.svg" alt="Логотип студии">
+        </a>
+        <ul class="site-navigation">
+            <li> <a href="studio.html"> Студия </a> </li>
+            <li> <a href="clients.html"> Клиенты </a> </li>
+            <li> <a href="shop.html"> Магазин </a> </li>
+            <li> <a href="contacts.html"> Контакты </a> </li>
+        </ul>
+        <ul class ="user-navigation">
+            <li class="bascket">Корзина</li>
+        </ul>
+    </nav>
+    <b class="main-text"> Долго, дорого, скурпулезно.</b>
+    <p>Математически выверенные дизайн для вашего сайта или мобильного приложения.</p>
+    <nav class="learn-more">
+        <a class="btn" href="more.html">Узнать больше</a>
+    </nav>
+    <div class="slider123">
+    </div>
+</header>
+<main class="container">
+    <h1 class="visually-hidden">Дизайн-студия "Нёрдс"</h1>
+       <section class="services">
+           <article class="site">
+               <img src="site-logo" alt="Веб-сайты">
+               <h2 class="services-text">Веб-сайты</h2>
+               <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+               <span class="button">Заказать</span>
+           </article>
+           <article class="apps">
+               <img src="apps-logo" alt="Приложения">
+               <h2 class="services-text">Приложения</h2>
+               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+               <span class="button">Заказать</span>
+           </article>
+           <article class="presentations">
+               <img src="presentations-logo" alt="Презентации">
+               <h2 class="services-text">Презентации</h2>
+               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+               <span class="button">Заказать</span>
+           </article>
+       </section>
+          <article class="about-us">
+                <section class="description">
+                    <b class="slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+                    <p>Исповедуем принципы минимализма и чистоты, ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+                    <b class="scope">Выполнием заказы на разработку:</b>
+                    <p class="scope-list">Веб-сайтов любой сложности</p>
+                    <p class="scope-list">Мобильных приложений для IOS и Android</p>
+                    <p class="scope-list">Слайдшоу и видео для корпаративных презентаций</p>
+                </section>
+                <section class="statistics">
+                    <p class="scope">С 2004 года любим точность во всем:</p> 
+                        <table class="our-results">
+                            <tr>
+                                <td>146<span class="sup">%</span></td>
+                                <td>100<span class="sup">%</span></td>
+                                <td>50<span class="sup">%</span></td>
+                            </tr>
+                            <tr>
+                                <td>Уровень саммотдачи</td>
+                                <td>Соблюдение сроков</td>
+                                <td>Минимальная предоплата</td>
+                            </tr>
+                        </table>
+                </section>
+          </article>
+    <div class="examples">
+        <ul class="ground-navigation">
+            <li><a> <img src="htmlacademy.ru" alt="HTML академия"> </a></li>
+            <li><a> <img src="barbershop.ru" alt="Барбершоп"> </a></li>
+            <li><a> <img src="pink.ru" alt="Пинк"> </a></li>
+            <li><a> <img src="mishka.ru" alt="Мишка"> </a></li>
+        </ul>
+    </div>
+    
+</main>
+<footer class="main-footer">
+    <b class="footer-text">Давайте дружить, это выгодно!</b>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
+    <div class="footer-social">
+        <ul>
+            <li><a class="social-buttom" href="#">Вконтакте</a></li>
+            <li><a class="social-buttom" href="#"> Фейсбук</a></li>
+            <li><a class="social-buttom" href="#"> Телеграм</a></li>
+        </ul>
+    </div>
+    <section class="map">
+        <h2 class="visual-hidden">Карта</h2>
+        <span class="map-close">x</span>
+    </section>
+    <section class="write-us">
+        <p class="write-us-head"> NЁRDS DESIGN STUDIO</p>
+        191186, Санкт-Петербург,
+        ул. Конюшенная, д. 19/8
+        <br>
+        тел. +7 (812) 275-75-75
+        <span class="button">Напишите нам</span>
+    </section>
+</footer>
 
   </body>
 </html>
