--- a/index.html
+++ b/index.html
@@ -21,34 +21,45 @@
             <li class="bascket">Корзина</li>
         </ul>
     </nav>
-    <b class="main-text"> Долго, дорого, скурпулезно.</b>
-    <p>Математически выверенные дизайн для вашего сайта или мобильного приложения.</p>
-    <nav class="learn-more">
-        <a class="btn" href="more.html">Узнать больше</a>
-    </nav>
-    <div class="slider123">
-    </div>
-</header>
+          </header>
 <main class="container">
     <h1 class="visually-hidden">Дизайн-студия "Нёрдс"</h1>
+    <section class="head-animation">
+        <div class="advantages">
+            <b class="main-text"> Долго, дорого, скурпулезно.</b>
+            <p>Математически выверенные дизайн для вашего сайта или мобильного приложения.</p>
+            <img src="picture-layer1" alt="первый слой">
+         </div>
+        <div class="advantages">
+            <b class="main-text">Любим математику как никтодругой</b>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <img src="picture-layer2" alt="второй слой">
+         </div>
+        <div class="advantages">
+            <b class="main-text">Только ночь, только хардкор</b>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <img src="picture-layer3" alt="третий слой">
+         </div>
+        <a class="btn" href="more.html">Узнать больше</a>
+    </section>
        <section class="services">
            <article class="site">
                <img src="site-logo" alt="Веб-сайты">
                <h2 class="services-text">Веб-сайты</h2>
                <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-               <span class="button">Заказать</span>
+               <button type="button">Заказать</button>
            </article>
            <article class="apps">
                <img src="apps-logo" alt="Приложения">
                <h2 class="services-text">Приложения</h2>
                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-               <span class="button">Заказать</span>
+               <button type="button">Заказать</button>
            </article>
            <article class="presentations">
                <img src="presentations-logo" alt="Презентации">
                <h2 class="services-text">Презентации</h2>
                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-               <span class="button">Заказать</span>
+               <button type="button">Заказать</button>
            </article>
        </section>
           <article class="about-us">
@@ -56,9 +67,11 @@
                     <b class="slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
                     <p>Исповедуем принципы минимализма и чистоты, ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
                     <b class="scope">Выполнием заказы на разработку:</b>
-                    <p class="scope-list">Веб-сайтов любой сложности</p>
-                    <p class="scope-list">Мобильных приложений для IOS и Android</p>
-                    <p class="scope-list">Слайдшоу и видео для корпаративных презентаций</p>
+                    <ul class="our-scope">
+                        <li class="scope-list">Веб-сайтов любой сложности</li>
+                        <li class="scope-list">Мобильных приложений для IOS и Android</li>
+                        <li class="scope-list">Слайдшоу и видео для корпаративных презентаций</li>
+                    </ul>
                 </section>
                 <section class="statistics">
                     <p class="scope">С 2004 года любим точность во всем:</p> 
