--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 <header class="main-header">
     <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img-logo.svg" alt="Логотип студии">
+          <img src="img\img-logo.png" alt="Логотип студии">
         </a>
         <ul class="site-navigation">
             <li> <a href="studio.html"> Студия </a> </li>
@@ -86,7 +86,7 @@
           
           <section class="show-list">
               <div>
-                <img src="Sedona">
+                <img src="img\Sedona.jpg">
                     <div class="click-show">
                         <h3 class="choise">Sedona</h3>
                         <p>Информационный сайт для туристов</p>
@@ -94,7 +94,7 @@
                     </div>  
             </div>
               <div>
-                  <img src="A Plus">
+                  <img src="img\A plus.jpg">
                   <div class="click-show">
                         <h3 class="choise">A Plus</h3>
                         <p>Лендинг курсов повышения квалификации</p>
@@ -102,7 +102,7 @@
                     </div>  
               </div>
               <div>
-                  <img src="Kvast">
+                  <img src="img\Kvast.jpg">
                   <div class="click-show">
                         <h3 class="choise">Kvast</h3>
                         <p>Промо-сайт производителя крафтового кваса</p>
@@ -110,7 +110,7 @@
                     </div>  
               </div>
               <div>
-                  <img src="Barbershop">
+                  <img src="img\Barbershop.jpg">
                   <div class="click-show">
                         <h3 class="choise">Barbershop</h3>
                         <p>Сайт салона красоты. Для мужчин,да.</p>
@@ -118,7 +118,7 @@
                     </div>  
               </div>
               <div>
-                  <img src="Mishka">
+                  <img src="img\Mishka.jpg">
                   <div class="click-show">
                         <h3 class="choise">Mishka</h3>
                         <p>Интернет-магазин вязаных игрушек</p>
@@ -126,7 +126,7 @@
                     </div>  
               </div>
               <div>
-                  <img src="Pink">
+                  <img src="img\Pink.jpg">
                   <div class="click-show">
                         <h3 class="choise">Pink</h3>
                         <p>Продуктовый лендинг приложения для OS и Android</p>
