--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header class="main-header">
     <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img-logo.svg" alt="Логотип студии">
+          <img src="img\img-logo.png" alt="Логотип студии">
         </a>
         <ul class="site-navigation">
             <li> <a href="studio.html"> Студия </a> </li>
@@ -44,19 +44,19 @@
     </section>
        <section class="services">
            <article class="site">
-               <img src="site-logo" alt="Веб-сайты">
+               <img src="img\site-logo.png" alt="Веб-сайты">
                <h2 class="services-text">Веб-сайты</h2>
                <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                <button type="button">Заказать</button>
            </article>
            <article class="apps">
-               <img src="apps-logo" alt="Приложения">
+               <img src="img\apps-logo.png" alt="Приложения">
                <h2 class="services-text">Приложения</h2>
                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                <button type="button">Заказать</button>
            </article>
            <article class="presentations">
-               <img src="presentations-logo" alt="Презентации">
+               <img src="img\presentations-logo.png" alt="Презентации">
                <h2 class="services-text">Презентации</h2>
                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
                <button type="button">Заказать</button>
@@ -91,10 +91,10 @@
           </article>
     <div class="examples">
         <ul class="ground-navigation">
-            <li><a> <img src="htmlacademy.ru" alt="HTML академия"> </a></li>
-            <li><a> <img src="barbershop.ru" alt="Барбершоп"> </a></li>
-            <li><a> <img src="pink.ru" alt="Пинк"> </a></li>
-            <li><a> <img src="mishka.ru" alt="Мишка"> </a></li>
+            <li><a> <img src="img\logo-1-min.png" alt="HTML академия"> </a></li>
+            <li><a> <img src="img\logo-2-min.png" alt="Барбершоп"> </a></li>
+            <li><a> <img src="img\logo-3-min.png" alt="Пинк"> </a></li>
+            <li><a> <img src="img\logo-4-min.png" alt="Мишка"> </a></li>
         </ul>
     </div>
     
@@ -111,6 +111,7 @@
     </div>
     <section class="map">
         <h2 class="visual-hidden">Карта</h2>
+        <img src="img\map1.png" alt="карта">
         <span class="map-close">x</span>
     </section>
     <section class="write-us">
@@ -125,3 +126,5 @@
 
   </body>
 </html>
+
+
