--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
         <ul class ="user-navigation">
             <li class="bascket">
-                <a class="bascket" href="bascket.html">Корзина</a>
+                <a class="bascket" href="#">Корзина</a>
             </li>
         </ul>
     </nav>
@@ -30,17 +30,17 @@
         <div class="advantages">
             <b class="main-text"> Долго, дорого, скурпулезно.</b>
             <p>Математически выверенные дизайн для вашего сайта или мобильного приложения.</p>
-            <img src="picture-layer1" alt="первый слайд">
+            <img src="picture-layer1" alt="Слайд с изображением телефона">
          </div>
         <div class="advantages">
             <b class="main-text">Любим математику как никтодругой</b>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-            <img src="picture-layer2" alt="второй слайд">
+            <img src="picture-layer2" alt="Слайд с изображением планшета">
          </div>
         <div class="advantages">
             <b class="main-text">Только ночь, только хардкор</b>
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <img src="picture-layer3" alt="третий слайд">
+            <img src="picture-layer3" alt="Слайд с изображением телефона и планшета">
          </div>
         <a class="btn" href="more.html">Узнать больше</a>
     </section>
