--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
             <li> <a href="contacts.html"> Контакты </a> </li>
         </ul>
         <ul class ="user-navigation">
-            <a class="bascket" href="bascket.html">Корзина</a>
+            <a class="bascket" href="#">Корзина</a>
         </ul>
     </nav>
         </header>
@@ -153,9 +153,9 @@
           
         <div class="catalog-navigation">
            <ul class="catalog-btn">
-            <li><button class="catalog-btn-one" type="button" tabindex="0"></button></li>
-            <li><button class="catalog-btn-tow" type="button" tabindex="0"></button></li>
-            <li><button class="catalog-btn-three" type="button" tabindex="0"></button></li>
+            <li><button class="catalog-btn-one" type="button" tabindex="0">1</button></li>
+            <li><button class="catalog-btn-tow" type="button" tabindex="0">2</button></li>
+            <li><button class="catalog-btn-three" type="button" tabindex="0">3</button></li>
             <li><button class="catalog-btn-next" type="button" tabindex="0"> СЛЕДУЮЩАЯ </button></li>
         </ul>
           </div>
@@ -194,6 +194,7 @@
                 <label for="write-form-letter">Текст письма:</label>
                 <textarea id="write-form-letter" name="letter" rows="5" placeholder="В свободной форме"></textarea>
                 <div>
+                   
                    <input type="submit" value="Отправить">
                 </div>
             </form>
