--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </ul>
     </div>
     <section class="map">
-        <h2 class="visual-hidden">Карта</h2>
+        <h2 class="visually-hidden">Карта</h2>
         <img src="img\map1.png" alt="карта" width="1440" height="785">
         <span class="map-close">x</span>
     </section>
