--- a/catalog.html
+++ b/catalog.html
@@ -30,14 +30,10 @@
                   <li><a>по цене</a></li>
                   <li><a>по типу</a></li>
                   <li><a>по названию</a></li>
+                  <li><a class="gradation-btn"> По убыванию </a></li>
+                  <li><a class="gradation-btn"> По возрастанию</a></li>
               </ul>
-              <form class=" gradation" action="" "https://https://echo.htmlacademy.ru" method="post"> 
-              <ul class="gradation-btn">
-                  <li><input type="image" src="img/down.ru" alt="По убыванию" method="post"></li>
-                  <li><input type="image" src="img/up.ru" alt="По возрастанию" method="post"></li>
-              </ul>
-                  </form>
-          </div>
+        </div>
           <section class="filters">
             <h2 class="visually-hidden">Параметры выбора нужного шаблона</h2>
           <form class="price" method="get" action="https://echo.htmlacademy.ru" oninput="radio.value=radiocount.value">
@@ -101,51 +97,51 @@
               <h2 class="visually-hidden">Изображения готовых макетов</h2>
               <ul class="catalog-list">
                 <li class="catalog-item">
-                    <a href="add-basket.html">
+                    <a href="#">
                         <h3 class="visually-hidden">Sedona Информационный сайт для туристов</h3>
                         <img src="img\Sedona.jpg" width="360" height="576" alt="Sedona">
                         <span>Информационный сайт для туристов</span>
-                            <span>9900 руб.</span>
+                            <buttom class="catalog-item-btn" type="buttom">9900 руб.</buttom>
                     </a>
                 </li>
                 <li class="catalog-item">
-                    <a href="add-basket.html">
+                    <a href="#">
                         <h3 class="visually-hidden">A Plus Лендинг курсов повышения квалификации</h3>
                         <img src="img\A plus.jpg" width="360" height="576" alt="A plus">        
                         <span>Лендинг курсов повышения квалификации</span>
-                        <span>9900 руб.</span>
+                        <buttom class="catalog-item-btn" type="buttom">9900 руб.</buttom>
                     </a>
                 </li>
                 <li class="catalog-item">
-                    <a href="add-basket.html">
+                    <a href="#">
                         <h3 class="visually-hidden">Kvast</h3>
                         <img src="img\Kvast.jpg" width="360" height="576" alt="Kvast">
                         <span>Промо-сайт производителя крафтового кваса</span>
-                        <span>9900 руб.</span>
+                        <buttom class="catalog-item-btn" type="buttom">9900 руб.</buttom>
                     </a>  
                 </li>
                 <li class="catalog-item">
-                   <a href="add-basket.html"> 
+                   <a href="#"> 
                         <h3 class="visually-hidden">Barbershop Сайт салона красоты. Для мужчин,да.</h3>
                         <img src="img\Barbershop.jpg" width="360" height="576" alt="Barbershop">
                         <span>Сайт салона красоты. Для мужчин,да.</span>
-                        <span>9900 руб.</span>
+                        <buttom class="catalog-item-btn" type="buttom">9900 руб.</buttom>
                     </a>  
                 </li>
                 <li class="catalog-item">
-                   <a href="add-basket.html"> 
+                   <a href="#"> 
                        <h3 class="visually-hidden">Mishka Интернет-магазин вязаных игрушек</h3>
                         <img src="img\Mishka.jpg" width="360" height="576" alt="Mishka">         
                         <span>Интернет-магазин вязаных игрушек</span>
-                        <span>9900 руб.</span>
+                        <buttom class="catalog-item-btn" type="buttom">9900 руб.</buttom>
                     </a>  
                 </li>
               <li class="catalog-item">
-                   <a href="add-basket.html"> 
+                   <a href="#"> 
                         <h3 class="visually-hidden">Pink Продуктовый лендинг приложения для OS и Android</h3>
                         <img src="img\Pink.jpg" width="360" height="576" alt="Pink">
                         <span>Продуктовый лендинг приложения для OS и Android</span>
-                        <span>9900 руб.</span>
+                        <buttom class="catalog-item-btn" type="buttom">9900 руб.</buttom>
                     </a>  
               </li>
               </ul>
@@ -153,10 +149,10 @@
           
         <div class="catalog-navigation">
            <ul class="catalog-btn">
-            <li><button class="catalog-btn-one" type="button" tabindex="0">1</button></li>
-            <li><button class="catalog-btn-tow" type="button" tabindex="0">2</button></li>
-            <li><button class="catalog-btn-three" type="button" tabindex="0">3</button></li>
-            <li><button class="catalog-btn-next" type="button" tabindex="0"> СЛЕДУЮЩАЯ </button></li>
+            <li><a class="catalog-btn-page">1</a></li>
+            <li><a class="catalog-btn-page">2</a></li>
+            <li><a class="catalog-btn-page" >3</a></li>
+            <li><a class="catalog-btn-page" > СЛЕДУЮЩАЯ </a></li>
         </ul>
           </div>
       </main>
