--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <!--<link rel="stylesheet" href="style.css">-->
+       <link href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=cyrillic" rel="stylesheet"> 
+       <link rel="stylesheet" href="css/normalize.css">
+       <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 <header class="main-header">
@@ -12,10 +14,10 @@
           <img src="img\img-logo.png" alt="Логотип студии" width="160" height="65">
         </a>
         <ul class="site-navigation">
-            <li> <a href="studio.html"> Студия </a> </li>
-            <li> <a href="clients.html"> Клиенты </a> </li>
-            <li> <a href="shop.html"> Магазин </a> </li>
-            <li> <a href="contacts.html"> Контакты </a> </li>
+            <li> <a href="#"> Студия </a> </li>
+            <li> <a href="#"> Клиенты </a> </li>
+            <li> <a href="#"> Магазин </a> </li>
+            <li> <a href="#"> Контакты </a> </li>
         </ul>
         <ul class ="user-navigation">
             <li class="bascket">
@@ -42,7 +44,7 @@
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <img src="picture-layer3" alt="Слайд с изображением телефона и планшета">
          </div>
-        <a class="btn" href="more.html">Узнать больше</a>
+        <a class="btn" href="#">Узнать больше</a>
     </section>
        <section class="services">
            <article class="site">
@@ -84,9 +86,9 @@
                                 <td>50<span class="sup">%</span></td>
                             </tr>
                             <tr>
-                                <td>Уровень саммотдачи</td>
-                                <td>Соблюдение сроков</td>
-                                <td>Минимальная предоплата</td>
+                                <td class="sup-text">Уровень саммотдачи</td>
+                                <td class="sup-text">Соблюдение сроков</td>
+                                <td class="sup-text">Минимальная предоплата</td>
                             </tr>
                         </table>
                 </section>
