а теперь hover заболел

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
     </section>
        <section class="services">
            <article class="site">
-               <img src="img\site-logo.png" alt="Веб-сайты" width="300" height="146">
+               <a href="#"><img src="img\site-logo.png" alt="Веб-сайты" width="300" height="146"></a>
                <h2 class="services-text">Веб-сайты</h2>
                <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                <button type="button">Заказать</button>
            </article>
            <article class="apps">
-               <img src="img\apps-logo.png" alt="Приложения" width="300" height="146">
+               <a href="#"><img src="img\apps-logo.png" alt="Приложения" width="300" height="146"></a>
                <h2 class="services-text">Приложения</h2>
                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                <button type="button">Заказать</button>
            </article>
            <article class="presentations">
-               <img src="img\presentations-logo.png" alt="Презентации" width="300" height="146">
+               <a href="#"><img src="img\presentations-logo.png" alt="Презентации" width="300" height="146"></a>
                <h2 class="services-text">Презентации</h2>
                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
                <button type="button">Заказать</button>
@@ -81,9 +81,9 @@
                     <p class="scope">С 2004 года любим точность во всем:</p> 
                         <table class="our-results">
                             <tr>
-                                <td>146<span class="sup">%</span></td>
-                                <td>100<span class="sup">%</span></td>
-                                <td>50<span class="sup">%</span></td>
+                                <td class="sup">146<sup>%</sup></td>
+                                <td class="sup">100<sup>%</sup></td>
+                                <td class="sup">50<sup>%</sup></td>
                             </tr>
                             <tr>
                                 <td class="sup-text">Уровень саммотдачи</td>
@@ -95,17 +95,17 @@
           </article>
     <div class="examples">
         <ul class="ground-navigation">
-            <li><a> <img src="img\logo-1-min.png" alt="HTML академия" width="199" height="68"> </a></li>
-            <li><a> <img src="img\logo-2-min.png" alt="Барбершоп" width="209" height="90"> </a></li>
-            <li><a> <img src="img\logo-3-min.png" alt="Пинк" width="185" height="52"> </a></li>
-            <li><a> <img src="img\logo-4-min.png" alt="Мишка" width="173" height="84"> </a></li>
+            <li><a href="#"> <img src="img\logo-1-min.png" alt="HTML академия" width="199" height="68"> </a></li>
+            <li><a href="#"> <img src="img\logo-2-min.png" alt="Барбершоп" width="209" height="90"> </a></li>
+            <li><a href="#"> <img src="img\logo-3-min.png" alt="Пинк" width="185" height="52"> </a></li>
+            <li><a href="#"> <img src="img\logo-4-min.png" alt="Мишка" width="173" height="84"> </a></li>
         </ul>
     </div>
     
 </main>
 <footer class="main-footer">
     <b class="footer-text">Давайте дружить, это выгодно!</b>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
+    <p class="discont">Скидка 10% для друзей из социальных сетей.</p>
     <div class="footer-social">
         <ul>
             <li><a class="social-buttom" href="#">Вконтакте</a></li>
@@ -120,11 +120,11 @@
     </section>
     <section class="write-us">
         <p class="write-us-head"> NЁRDS DESIGN STUDIO</p>
-        <p>191186, Санкт-Петербург,
+        <p class="write-us-addres">191186, Санкт-Петербург,
             ул. Конюшенная, д. 19/8</p>
         <br>
         тел. +7 (812) 275-75-75
-        <button class="button" type="button" tabindex="0">Напишите нам</button>
+        <button class="btn" type="button" tabindex="0">Напишите нам</button>
     </section>
 </footer>
       <section class="write-us-form"> 
