--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <p class="write-us-addres">191186, Санкт-Петербург,
             ул. Конюшенная, д. 19/8</p>
         <br>
-        тел. +7 (812) 275-75-75
+        <p class="write-us-addres">тел. +7 (812) 275-75-75</p>
         <button class="btn" type="button" tabindex="0">Напишите нам</button>
     </section>
 </footer>
